--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,7 @@ ARG ver=3.8
 
 FROM python:$ver-slim
 
+
 WORKDIR /app
 COPY requirements.txt .
 COPY api.py .
@@ -20,4 +21,4 @@ RUN apt-get update && apt-get install -y \
 && flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics \
 && python -m pip install librosa flask flask_cors chord_extractor
 
-CMD ["python", "api.py"]
+CMD ["python api.py --port=$BACKEND_SERVER_PORT"]
