fixed usage of dockerfile (sorry for being so dumbQQ) ps. if you don't use bash -c and then add your command in CMD, then the environment variables won't be parsed

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,4 +21,4 @@ RUN apt-get update && apt-get install -y \
 && flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics \
 && python -m pip install librosa flask flask_cors chord_extractor
 
-CMD ["python api.py --port=$BACKEND_SERVER_PORT"]
+CMD ["bash", "-c", "python api.py --port=$BACKEND_SERVER_PORT"]
