--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,5 +19,17 @@ http {
             add_header Access-Control-Allow-Origin *;
         }
     }
+
+    server {
+        listen ${WEB_SERVER_BE_PORT};
+
+        location / {
+            proxy_pass http://backend:${BACKEND_SERVER_PORT};
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
 
