--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,7 +4,8 @@ COPY ./nginx.conf /etc/nginx/nginx.conf.template
 COPY ./start.sh /start.sh
 WORKDIR /app
 RUN apk update && apk add npm bash
-RUN npm i && npm run build
+# RUN env > ./.env
+# RUN npm i && npm run build
 CMD ["bash", "/start.sh"]
 
 
