--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,20 +11,17 @@ http {
     default_type application/octet-stream;
 
     server {
-        listen ${WEB_SERVER_FE_PORT};
+        listen ${WEB_SERVER_PORT};
+        client_max_body_size 100M;
 
         location / {
             root /app/dist;
             index index.html;
             add_header Access-Control-Allow-Origin *;
         }
-    }
 
-    server {
-        listen ${WEB_SERVER_BE_PORT};
-
-        location / {
-            proxy_pass http://backend:${BACKEND_SERVER_PORT};
+        location /api {
+            proxy_pass http://backend:${BACKEND_SERVER_PORT}/api;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
