--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 
 USER_INTERFACE_PORT=80
-USER_API_PORT=3939
 
-WEB_SERVER_FE_PORT=80
-WEB_SERVER_BE_PORT=3939
+WEB_SERVER_PORT=80
 
 BACKEND_SERVER_PORT=3000
 BACKEND_SERVER_LOG_PATH=/app/log
+
+#
+SERVER_IP_ADDRESS=localhost
 
 
